--- a/app/src/main/res/values/numbers.xml
+++ b/app/src/main/res/values/numbers.xml
@@ -5,5 +5,6 @@
     <integer name="default_font_size">20</integer>
     <bool name="default_pro_mode">true</bool>
     <bool name="default_is_dark_theme">false</bool>
+    <bool name="default_use_system_theme">true</bool>
     <integer name="songs_version">5</integer>
 </resources>
