--- a/app/src/main/res/values/numbers.xml
+++ b/app/src/main/res/values/numbers.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <integer name="songs_version">5</integer>
+
     <integer name="min_font_size">15</integer>
     <integer name="max_font_size">40</integer>
+
+    <!--  Settings defaults  -->
     <integer name="default_font_size">20</integer>
     <bool name="default_pro_mode">true</bool>
     <bool name="default_is_dark_theme">false</bool>
     <bool name="default_use_system_theme">true</bool>
-    <integer name="songs_version">5</integer>
+
+    <!--  Settings dialog  -->
+    <integer name="row_animation_duration_ms">300</integer>
+    <integer name="divider_animation_duration_ms">300</integer>
 </resources>
